kubernetes-manifests/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-app-route
  namespace: resume-app
  annotations:
    ingressClassName: nginx
spec:
  rules:
    - host: jaromero.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resume-frontend-svc
                port:
                  number: 80
          - path: /api/count
            pathType: Prefix
            backend:
              service:
                name: resume-backend-svc
                port:
                  number: 8000
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: resume-backend-svc
                port:
                  number: 8000
